@@ -72,10 +72,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
+
                 <configuration>
+                    <!--
                     <compilerArgs>
-                        <arg>--enable-preview</arg>
+                        <arg>- -enable-preview</arg>
                     </compilerArgs>
+                    -->
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                 </configuration>
@@ -102,7 +105,7 @@
     </build>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>15</java.version>
+        <java.version>17</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <failOnMissingWebXml>false</failOnMissingWebXml>
